<resources>
    <string name="app_name">Association</string>
    <string name="language">Language</string>
    <string name="proceed">Proceed</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string-array name="langarr">
        <item>English</item>
        <item>Malayalam</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">assoication@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
